--- a/index.html
+++ b/index.html
@@ -18,12 +18,33 @@
         <div>
           <h2>Make your life simpler and try this for free</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga,
-            tenetur.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus
+            sequi officia repellat excepturi mollitia accusamus libero sit eius
+            cumque exercitationem.
           </p>
-          <a href="#">Read me...</a>
+          <a href="#">Read Me...</a>
         </div>
       </div>
     </header>
+
+    <section class="adv">
+      <div class="background">
+        <a href="#">
+          <img src="img/client_1.png" alt="logo1">
+        </a>
+        <a href="#">
+          <img src="img/client_2.png" alt="logo2">
+        </a>
+        <a href="#">
+          <img src="img/client_3.png" alt="logo3">
+        </a>
+        <a href="#">
+          <img src="img/client_4.png" alt="logo4">
+        </a>
+        <a href="#">
+          <img src="img/client_5.png" alt="logo5">
+        </a>
+      </div>
+    </section>
   </body>
 </html>
