--- a/index.html
+++ b/index.html
@@ -28,22 +28,32 @@
     </header>
 
     <section class="adv">
-      <div class="background">
         <a href="#">
-          <img src="img/client_1.png" alt="logo1">
+          <img src="img/client_1.png" alt="logo1" />
         </a>
         <a href="#">
-          <img src="img/client_2.png" alt="logo2">
+          <img src="img/client_2.png" alt="logo2" />
         </a>
         <a href="#">
-          <img src="img/client_3.png" alt="logo3">
+          <img src="img/client_3.png" alt="logo3" />
         </a>
         <a href="#">
-          <img src="img/client_4.png" alt="logo4">
+          <img src="img/client_4.png" alt="logo4" />
         </a>
         <a href="#">
-          <img src="img/client_5.png" alt="logo5">
+          <img src="img/client_5.png" alt="logo5" />
         </a>
+    </section>
+
+    <section class=" container-fluid bio">
+      <div>
+        <h2>Make your life simpler</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis et
+          aperiam dignissimos quae recusandae accusantium saepe earum optio
+          labore amet.
+        </p>
+        <a href="#">Watch the video</a>
       </div>
     </section>
   </body>
