--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="container-fluid header-main-fluid">
       <div class="container header-main">
         <img src="img/cube.png" alt="Cube" />
-        <div>
+        <div class="inner-main">
           <h2>Make your life simpler and try this for free</h2>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus
@@ -45,13 +45,11 @@
         </a>
     </section>
 
-    <section class=" container-fluid bio">
+    <section class="bio">
       <div>
         <h2>Make your life simpler</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis et
-          aperiam dignissimos quae recusandae accusantium saepe earum optio
-          labore amet.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis adipisci magni eligendi deserunt at magnam totam architecto nam veritatis minima, sit, accusamus possimus sint minus ipsam esse placeat. Neque.
         </p>
         <a href="#">Watch the video</a>
       </div>
