--- a/index.html
+++ b/index.html
@@ -54,5 +54,27 @@
         <a href="#">Watch the video</a>
       </div>
     </section>
+
+    <section class="posts">
+      <div>
+        <img src="icons/SVG/home.png" alt="home">
+        <h2>Marketing</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum totam sit culpa suscipit officia aperiam delectus amet quidem. Laudantium consequuntur, beatae quo nesciunt consectetur distinctio cumque culpa ut hic aliquid nam voluptatem error odit iste iusto temporibus doloribus, magnam nostrum asperiores. Sapiente reprehenderit sint nisi.
+
+        </p>
+      </div>
+      <div>
+        <img src="icons/SVG/newspaper.png" alt="gazeta">
+        <h2>Design</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, magni, perspiciatis commodi iusto itaque totam architecto reprehenderit ipsum harum earum exercitationem neque eligendi dignissimos nisi sed laudantium quaerat consequatur non? Officiis nam tempora dicta modi, doloribus exercitationem ducimus tenetur. Facere sed tempora quae non quidem veritatis ipsam dolorum quasi asperiores enim, culpa cum corrupti iusto a, provident exercitationem. Voluptas.
+        </p>
+      </div>
+      <div>
+        <img src="icons/SVG/pen.png" alt="pioro">
+        <h2>Development</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique reprehenderit autem quaerat iure sed consequuntur sint hic tenetur totam. Distinctio officiis voluptatibus quam, nemo corrupti minima nesciunt eum harum maiores eos nisi blanditiis laboriosam quo eligendi magni qui eveniet eaque sint quaerat iusto. Beatae cupiditate quasi sed explicabo minus ipsa.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
