--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
         <img src="icons/SVG/home.png" alt="home">
         <h2>Marketing</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum totam sit culpa suscipit officia aperiam delectus amet quidem. Laudantium consequuntur, beatae quo nesciunt consectetur distinctio cumque culpa ut hic aliquid nam voluptatem error odit iste iusto temporibus doloribus, magnam nostrum asperiores. Sapiente reprehenderit sint nisi.
-
         </p>
       </div>
       <div>
@@ -73,6 +72,15 @@
         <img src="icons/SVG/pen.png" alt="pioro">
         <h2>Development</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique reprehenderit autem quaerat iure sed consequuntur sint hic tenetur totam. Distinctio officiis voluptatibus quam, nemo corrupti minima nesciunt eum harum maiores eos nisi blanditiis laboriosam quo eligendi magni qui eveniet eaque sint quaerat iusto. Beatae cupiditate quasi sed explicabo minus ipsa.
+        </p>
+      </div>
+    </section>
+
+    <section class="products">
+      <div>
+        <h2>Popular Products</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis adipisci magni eligendi deserunt at magnam totam architecto. Nemo corrupti minima nesciunt eum harum maiores eos nisi blanditiis laboriosam quo eligendi magni qui eveniet eaque sint quaerat iusto. Beatae cupiditate quasi sed explicabo minus ip.
         </p>
       </div>
     </section>
