--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500"
       rel="stylesheet"
     />
-    <title>Projekt Strona</title>
+    <title>Projekt Cube</title>
   </head>
   <body>
     <header class="container-fluid header-main-fluid">
