--- a/index.html
+++ b/index.html
@@ -84,5 +84,21 @@
         </p>
       </div>
     </section>
+
+    <section class="container-fluid gallery">
+      <div class="pallets">
+        <div class="sidepictures">
+          <div class="pic1"></div>
+          <div class="pic2"></div>
+        </div>
+        <div class="centerpicture">
+          <div class="pic5"></div>
+        </div>
+        <div class="sidepictures">
+          <div class="pic3"></div>
+          <div class="pic4"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
