--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Projekt Cube</title>
   </head>
   <body>
+
+    <!-- HEADER -->
     <header class="container-fluid header-main-fluid">
       <div class="container header-main">
         <img src="img/cube.png" alt="Cube" />
@@ -27,64 +29,95 @@
       </div>
     </header>
 
+    <!-- ADVERTISEMENT -->
     <section class="adv">
-        <a href="#">
-          <img src="img/client_1.png" alt="logo1" />
-        </a>
-        <a href="#">
-          <img src="img/client_2.png" alt="logo2" />
-        </a>
-        <a href="#">
-          <img src="img/client_3.png" alt="logo3" />
-        </a>
-        <a href="#">
-          <img src="img/client_4.png" alt="logo4" />
-        </a>
-        <a href="#">
-          <img src="img/client_5.png" alt="logo5" />
-        </a>
+      <a href="#">
+        <img src="img/client_1.png" alt="logo1" />
+      </a>
+      <a href="#">
+        <img src="img/client_2.png" alt="logo2" />
+      </a>
+      <a href="#">
+        <img src="img/client_3.png" alt="logo3" />
+      </a>
+      <a href="#">
+        <img src="img/client_4.png" alt="logo4" />
+      </a>
+      <a href="#">
+        <img src="img/client_5.png" alt="logo5" />
+      </a>
     </section>
 
+    <!-- BIO -->
     <section class="bio">
       <div>
         <h2>Make your life simpler</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis adipisci magni eligendi deserunt at magnam totam architecto nam veritatis minima, sit, accusamus possimus sint minus ipsam esse placeat. Neque.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis
+          adipisci magni eligendi deserunt at magnam totam architecto nam
+          veritatis minima, sit, accusamus possimus sint minus ipsam esse
+          placeat. Neque.
         </p>
         <a href="#">Watch the video</a>
       </div>
     </section>
 
+    <!-- POSTS -->
     <section class="posts">
       <div>
-        <img src="icons/SVG/home.png" alt="home">
+        <img src="icons/SVG/home.png" alt="home" />
         <h2>Marketing</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum totam sit culpa suscipit officia aperiam delectus amet quidem. Laudantium consequuntur, beatae quo nesciunt consectetur distinctio cumque culpa ut hic aliquid nam voluptatem error odit iste iusto temporibus doloribus, magnam nostrum asperiores. Sapiente reprehenderit sint nisi.
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum totam
+          sit culpa suscipit officia aperiam delectus amet quidem. Laudantium
+          consequuntur, beatae quo nesciunt consectetur distinctio cumque culpa
+          ut hic aliquid nam voluptatem error odit iste iusto temporibus
+          doloribus, magnam nostrum asperiores. Sapiente reprehenderit sint
+          nisi.
         </p>
       </div>
       <div>
-        <img src="icons/SVG/newspaper.png" alt="gazeta">
+        <img src="icons/SVG/newspaper.png" alt="gazeta" />
         <h2>Design</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, magni, perspiciatis commodi iusto itaque totam architecto reprehenderit ipsum harum earum exercitationem neque eligendi dignissimos nisi sed laudantium quaerat consequatur non? Officiis nam tempora dicta modi, doloribus exercitationem ducimus tenetur. Facere sed tempora quae non quidem veritatis ipsam dolorum quasi asperiores enim, culpa cum corrupti iusto a, provident exercitationem. Voluptas.
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique,
+          magni, perspiciatis commodi iusto itaque totam architecto
+          reprehenderit ipsum harum earum exercitationem neque eligendi
+          dignissimos nisi sed laudantium quaerat consequatur non? Officiis nam
+          tempora dicta modi, doloribus exercitationem ducimus tenetur. Facere
+          sed tempora quae non quidem veritatis ipsam dolorum quasi asperiores
+          enim, culpa cum corrupti iusto a, provident exercitationem. Voluptas.
         </p>
       </div>
       <div>
-        <img src="icons/SVG/pen.png" alt="pioro">
+        <img src="icons/SVG/pen.png" alt="pioro" />
         <h2>Development</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique reprehenderit autem quaerat iure sed consequuntur sint hic tenetur totam. Distinctio officiis voluptatibus quam, nemo corrupti minima nesciunt eum harum maiores eos nisi blanditiis laboriosam quo eligendi magni qui eveniet eaque sint quaerat iusto. Beatae cupiditate quasi sed explicabo minus ipsa.
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+          reprehenderit autem quaerat iure sed consequuntur sint hic tenetur
+          totam. Distinctio officiis voluptatibus quam, nemo corrupti minima
+          nesciunt eum harum maiores eos nisi blanditiis laboriosam quo eligendi
+          magni qui eveniet eaque sint quaerat iusto. Beatae cupiditate quasi
+          sed explicabo minus ipsa.
         </p>
       </div>
     </section>
 
+    <!-- PRODUCTS -->
     <section class="products">
       <div>
         <h2>Popular Products</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis adipisci magni eligendi deserunt at magnam totam architecto. Nemo corrupti minima nesciunt eum harum maiores eos nisi blanditiis laboriosam quo eligendi magni qui eveniet eaque sint quaerat iusto. Beatae cupiditate quasi sed explicabo minus ip.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis
+          adipisci magni eligendi deserunt at magnam totam architecto. Nemo
+          corrupti minima nesciunt eum harum maiores eos nisi blanditiis
+          laboriosam quo eligendi magni qui eveniet eaque sint quaerat iusto.
+          Beatae cupiditate quasi sed explicabo minus ip.
         </p>
       </div>
     </section>
 
+    <!-- GALLERY -->
     <section class="container-fluid gallery">
       <div class="pallets">
         <div class="sidepictures">
@@ -100,5 +133,6 @@
         </div>
       </div>
     </section>
+    
   </body>
 </html>
