--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <title>Projekt Cube</title>
   </head>
   <body>
-
     <!-- HEADER -->
     <header class="container-fluid header-main-fluid">
       <div class="container header-main">
@@ -58,7 +57,7 @@
           veritatis minima, sit, accusamus possimus sint minus ipsam esse
           placeat. Neque.
         </p>
-        <a href="#">Watch the video</a>
+        <a href="#">WATCH THE VIDEO</a>
       </div>
     </section>
 
@@ -132,7 +131,7 @@
           <div class="pic4"></div>
         </div>
       </div>
+      <a href="#">SHOW GALLERY</a>
     </section>
-    
   </body>
 </html>
