--- a/index.html
+++ b/index.html
@@ -133,5 +133,54 @@
       </div>
       <a href="#">SHOW GALLERY</a>
     </section>
+
+    <!-- PEOPLE LOVE US -->
+    <section class="container-fluid note">
+      <div class="napis">
+        <h2>People Love Us</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, dolor.
+        </p>
+      </div>
+      <div class="zbior">
+        <div class="cytat">
+          <div class="profile"></div>
+          <div class="tekst">
+            <article class="komentarz">
+              "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque
+              iure harum laborum earum, omnis officiis."
+            </article>
+            <p>~User1</p>
+          </div>
+        </div>
+        <div class="cytat">
+          <div class="profile"></div>
+          <div class="tekst">
+            <article class="komentarz">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta expedita nesciunt aspernatur recusandae ducimus cumque aut.
+            </article>
+            <p>~User2</p>
+          </div>
+        </div>
+        <div class="cytat">
+          <div class="profile"></div>
+          <div class="tekst">
+            <article class="komentarz">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quis, dolor, ex nobis labore optio assumenda qui, aliquid inventore maxime delectus perspiciatis aspernatur hic obcaecati."
+            </article>
+            <p>~User3</p>
+          </div>
+        </div>
+        <div class="cytat">
+          <div class="profile"></div>
+          <div class="tekst">
+            <article class="komentarz">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto omnis aut temporibus enim accusamus blanditiis nihil, vero explicabo laboriosam vel facilis voluptatem similique possimus? Modi corrupti dolorum animi."
+            </article>
+            <p>~User4</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
