--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
           <div class="profile"></div>
           <div class="tekst">
             <article class="komentarz">
-              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta expedita nesciunt aspernatur recusandae ducimus cumque aut.
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+              expedita nesciunt aspernatur recusandae ducimus cumque aut.
             </article>
             <p>~User2</p>
           </div>
@@ -166,7 +167,9 @@
           <div class="profile"></div>
           <div class="tekst">
             <article class="komentarz">
-              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quis, dolor, ex nobis labore optio assumenda qui, aliquid inventore maxime delectus perspiciatis aspernatur hic obcaecati."
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              quis, dolor, ex nobis labore optio assumenda qui, aliquid
+              inventore maxime delectus perspiciatis aspernatur hic obcaecati."
             </article>
             <p>~User3</p>
           </div>
@@ -175,10 +178,57 @@
           <div class="profile"></div>
           <div class="tekst">
             <article class="komentarz">
-              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto omnis aut temporibus enim accusamus blanditiis nihil, vero explicabo laboriosam vel facilis voluptatem similique possimus? Modi corrupti dolorum animi."
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto omnis aut temporibus enim accusamus blanditiis nihil,
+              vero explicabo laboriosam vel facilis voluptatem similique
+              possimus? Modi corrupti dolorum animi."
             </article>
             <p>~User4</p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <section class="container-fluid footer">
+      <div class="contact">
+        <div class="kontakt1">
+          <h2>We Love To Talk About Your Buisness</h2>
+          <div class="button">
+            <a href="#">CONTACT US</a>
+          </div>
+        </div>
+        <div class="kontakt2">
+          <div class="kolumna1">
+            <h3>Cube</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+              placeat omnis consequatur tenetur modi! Non qui nam aperiam ipsa
+              veritatis.
+            </p>
+          </div>
+          <nav>
+            <a href="*">HOME</a>
+            <a href="*">FEATURES</a>
+            <a href="*">PRODUCTS</a>
+            <a href="*">TESTIMONIAL</a>
+            <a href="*">CONTACT</a>
+          </nav>
+          <div class="kolumna3">
+            <p>+32124564276</p>
+            <p>email@adress.com</p>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>© Copyright 2018 / All Rights Reserved</p>
+        <div class="authors">
+          <p>Designed by</p>
+          <a href="#">Me</a>
+          <p>Author</p>
+          <a href="#">Me</a>
+          <p>&</p>
+          <a href="#">Info</a>
         </div>
       </div>
     </section>
