--- a/index.html
+++ b/index.html
@@ -208,13 +208,16 @@
             </p>
           </div>
           <nav>
-            <a href="*">HOME</a>
-            <a href="*">FEATURES</a>
-            <a href="*">PRODUCTS</a>
-            <a href="*">TESTIMONIAL</a>
-            <a href="*">CONTACT</a>
+            <div class="linki">
+              <a href="#">HOME</a>
+              <a href="#">FEATURES</a>
+              <a href="#">PRODUCTS</a>
+              <a href="#">TESTIMONIAL</a>
+              <a href="#">CONTACT</a>
+            </div>
           </nav>
           <div class="kolumna3">
+            <h2>Kontakt</h2>
             <p>+32124564276</p>
             <p>email@adress.com</p>
           </div>
