--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500"
       rel="stylesheet"
@@ -134,7 +134,7 @@
       <a href="#">SHOW GALLERY</a>
     </section>
 
-    <!-- PEOPLE LOVE US -->
+    <!-- COMMENTS -->
     <section class="container-fluid note">
       <div class="napis">
         <h2>People Love Us</h2>
